# car-app

./: .firebaserc  .gitignore  Cargo.toml  Makefile  README.md  build.rs  justfile  run_local.sh  scratch_map.rs
.github/workflows/: build.yml  firebase-hosting-merge.yml
assets/: map.mbtiles
car-app/: Cargo.toml
car-app/assets/: map.mbtiles
car-app/src/: hardware.rs  lib.rs  main.rs  map_renderer.rs
car-app/ui/: appwindow.slint
docs/: app.js  index.html  style.css
map-tool/: Cargo.toml
map-tool/src/: countries.rs  main.rs  map_processor.rs
src/: hardware.rs  lib.rs  main.rs  map_renderer.rs  spotify.rs
ui/: appwindow.slint  test.slint
