[package]
name = "car-app"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.1.9"
geo-types = "0.7.19"
mvt-reader = "2.3.0"
pmtiles2 = "0.3.2"
slint = "1.16.1"
tiny-skia = "0.12.0"
lru = "0.13.0"
log = "0.4.20"
env_logger = "0.11.3"
chrono = "0.4.44"
image = "0.25.1"

[build-dependencies]
slint-build = "1.16.1"

# Optimize dependencies in debug mode. 
# Software rendering (tiny-skia and Slint) is extremely slow without optimizations.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    ".",
    "map-tool",
]

