[workspace]
resolver = "2"
members = [
    "car-app",
    "map-tool",
]

[workspace.dependencies]
chrono = "0.4.44"
crossterm = "0.27.0"
env_logger = "0.11.3"
flate2 = "1.1.9"
geo-types = "0.7.19"
image = "0.25.1"
log = "0.4.20"
lru = "0.13.0"
mvt = "0.13.0"
mvt-reader = "2.3.0"
osmpbf = "0.3.3"
pmtiles2 = "0.3.2"
ratatui = "0.26.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
rustc-hash = "1.1.0"
slint = "1.16.1"
slint-build = "1.16.1"
tiny-skia = "0.12.0"

# Optimize dependencies in debug mode. 
# Software rendering (tiny-skia and Slint) is extremely slow without optimizations.
[profile.dev.package."*"]
opt-level = 3
