[workspace]
resolver = "2"
members = [
    "car-app",
    "map-tool",
]

[workspace.dependencies]
chrono = "0.4.45"
crossterm = "0.29.0"
env_logger = "0.11.10"
flate2 = "1.1.9"
geo-types = "0.7.19"
log = "0.4.32"
lru = "0.18.0"
mvt = "0.13.0"
mvt-reader = "2.4.0"
osmpbf = "0.3.8"
pmtiles2 = "0.3.2"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
rustc-hash = "2.1.2"
slint = "1.16.1"
slint-build = "1.16.1"
tiny-skia = "0.12.0"

# Optimize dependencies in debug mode. 
# Software rendering (tiny-skia and Slint) is extremely slow without optimizations.
[profile.dev.package."*"]
opt-level = 3
