[package]
name = "map-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { workspace = true }
osmpbf = { workspace = true }
mvt = { workspace = true }
pmtiles2 = { workspace = true }
flate2 = { workspace = true }
rustc-hash = { workspace = true }
